--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "jquery": "^2.1.1",
     "static-favicon": "~1.0.0",
     "underscore": "*",
-    "neo4j-js": "*",
+    "neo4j": "*",
     "morgan": "*",
     "underscore-express": "*"
   }
